# task-tickets

./: Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
config/: settings.py  urls.py
tasks/: admin.py  models.py  serializers.py  urls.py  views.py
tasks/migrations/: 0001_initial.py
tests/: conftest.py  test_tasks_api.py
